--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,12 @@
+@import "base/base";
+@import "base/animations";
+@import "base/typography";
+@import "base/utilities";
+@import "abstracts/functions";
+@import "abstracts/variables";
+@import "abstracts/mixins";
+@import "pages/home";
+
 /*
 COLORS:
 
@@ -208,6 +217,5 @@ body {
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
   }
-
 
 }
