main: moved .logo:hover to main from header, + layout/grid import

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,8 @@
 @import "layout/header";
 @import "base/typography";
 
+@import "layout/grid";
+
+// .logo:hover {
+//   animation: moveInRight 2s ease-out;
+// }
