--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,15 +2,21 @@
 @import "base/animations";
 @import "base/typography";
 @import "base/utilities";
+
 @import "abstracts/functions";
 @import "abstracts/variables";
 @import "abstracts/mixins";
-@import "pages/home";
+
 @import "components/button";
+@import "components/composition";
+
 @import "layout/header";
+@import "layout/grid";
+
 @import "base/typography";
 
-@import "layout/grid";
+@import "pages/home";
+
 
 // .logo:hover {
 //   animation: moveInRight 2s ease-out;
